optimize gc error note